[project]
name = "kafka_table"
version = "0.1.0"
description = "An implementation of LiveTable running over Kafka"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"}
]
dependencies = [
    "qtpy",
    "bluesky-kafka>=0.10.0",
    "bluesky-widgets>=0.0.16",
    "nslsii",
    # Add other dependencies as needed
]

[project.entry-points.console_scripts]
console-livetable = "kafka_table.kafka_table:main"
qt-livetable = "kafka_table.QtKafkaTable:main"

[project.entry-points."sst_gui.tabs"]
kafka-table-tab = "kafka_table.QtKafkaTable:QtKafkaTableTab"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"