[project]
name = "kafka_table"
version = "0.1.0"
description = "An implementation of LiveTable running over Kafka"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"}
]
dependencies = [
    "qtpy",
    "bluesky-kafka>=0.10.0",
    "bluesky-widgets>=0.0.16",
    "nslsii",
    # Add other dependencies as needed
]

[project.entry-points.console_scripts]
kafka-livetable = "kafka_table.kafka_table:main"
qt-kafka-livetable = "kafka_table.QtKafkaTable:main"
zmq-livetable = "kafka_table.zmq_table:main"
qt-zmq-livetable = "kafka_table.QtZmqTable:main"


[project.entry-points."sst_gui.tabs"]
kafka-table-tab = "kafka_table.QtKafkaTable:QtKafkaTableTab"
zmq-table-tab = "kafka_table.QtZmqTable:QtZMQTableTab"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"