[project]
name = "livetable"
version = "0.1.0"
description = "An implementation of LiveTable running over Kafka or ZMQ"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"}
]
dependencies = [
    "qtpy",
    "bluesky-kafka>=0.10.0",
    "bluesky-widgets>=0.0.16",
    "nslsii",
    # Add other dependencies as needed
]

[project.entry-points.console_scripts]
kafka-livetable = "livetable.kafka_table:main"
qt-kafka-livetable = "livetable.QtKafkaTable:main"
zmq-livetable = "livetable.zmq_table:main"
qt-zmq-livetable = "livetable.QtZmqTable:main"


[project.entry-points."nbs_gui.tabs"]
kafka-table-tab = "livetable.QtKafkaTable:QtKafkaTableTab"
zmq-table-tab = "livetable.QtZmqTable:QtZMQTableTab"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"